<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/b2b_icon_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/icon_search"
        android:orderInCategory="1"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_search" />
    <item
        android:id="@+id/menu_scanner"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:icon="@drawable/icon_scan"
        android:title="@string/menu_scanner" />

    <item
        android:id="@+id/b2b_icon_cart"
        android:actionLayout="@layout/layout_cart_total_unit"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/menu_cart" />
    <item
        android:id="@+id/menu_feedback"
        android:orderInCategory="4"
        android:showAsAction="never|withText"
        android:title="@string/menu_feedback" />
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="5"
        android:showAsAction="never|withText"
        android:title="@string/menu_settings" />

</menu>