<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true">

    <!-- Main content -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cart_menu_background"
        android:orientation="vertical">

        <!-- Header -->

        <LinearLayout
            android:id="@+id/cart_menu_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <!-- Continue shopping -->

            <LinearLayout
                android:id="@+id/cart_menu_header_continue_shop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@color/cart_menu_continue_shopping"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cart_menu_header_continue_shop_text"
                    style="@style/cart_header_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/arrow_left_big"
                    android:drawableStart="@drawable/arrow_left_big"
                    android:drawablePadding="10dp"
                    android:text="@string/cart_menu_continue_shopping" />
            </LinearLayout>

            <!-- Checkout -->

            <LinearLayout
                android:id="@+id/cart_menu_header_checkout"
                style="@style/action_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cart_menu_header_checkout_text"
                    style="@style/cart_header_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/arrow_right_big"
                    android:drawableEnd="@drawable/arrow_right_big"
                    android:text="@string/cart_menu_checkout" />
            </LinearLayout>
        </LinearLayout>

        <!-- Cart empty -->

        <TextView
            android:id="@+id/cart_menu_empty"
            style="@style/h2_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/cart_menu_empty"
            android:visibility="gone" />

        <!-- Cart details header -->

        <LinearLayout
            android:id="@+id/cart_menu_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cart_menu_price_margin_left_right"
            android:layout_marginRight="@dimen/cart_menu_price_margin_left_right"
            android:layout_marginTop="@dimen/cart_menu_price_margin_top"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/cart_menu_products_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cart_menu_price_budget_shopping_cart"
                    style="@style/h1_title_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cart_menu_shopping_cart_title" />

                <TextView
                    android:id="@+id/cart_menu_cart_id"
                    style="@style/h3_title_grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/cart_menu_price_margin_left_right"
                    android:layout_marginRight="@dimen/cart_menu_price_margin_left_right"
                    android:text="@string/cart_menu_shopping_cart_id" />
            </LinearLayout>

            <!-- cart Summary -->

            <include layout="@layout/include_cart_summary" />
        </LinearLayout>

        <!-- Cart content -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_marginTop="@dimen/cart_menu_products_header_margin_top"
            android:background="@color/cart_menu_products_header_background"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/cart_menu_price_margin_left_right"
            android:paddingRight="@dimen/cart_menu_price_margin_left_right">

            <TextView
                android:id="@+id/cart_menu_products_header_items"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.6"
                android:text="@string/cart_menu_products_header_items" />

            <TextView
                android:id="@+id/cart_menu_products_header_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/cart_menu_products_header_quantity" />

            <TextView
                android:id="@+id/cart_menu_products_header_total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.15"
                android:gravity="center"
                android:text="@string/cart_menu_products_header_total" />
        </LinearLayout>

        <TextView
            android:id="@+id/cart_menu_products_header_swipe_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cart_menu_products_header_swipe_hint" />

        <com.hybris.mobile.lib.ui.view.ListViewSwipeable
            android:id="@+id/cart_menu_products_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:divider="@drawable/shadow_bottom"
            android:dividerHeight="10dp" />
    </LinearLayout>

    <!-- Inner shadow from the right side -->

    <View
        android:layout_width="10dp"
        android:layout_height="match_parent"
        android:background="@drawable/shadow_right" />

</FrameLayout>