<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/order_background"
    android:orientation="vertical"
    android:padding="@dimen/padding_large">

    <!-- section 0 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.06"
        android:background="@color/order_background"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/order_confirm_title"
            style="@style/h2_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingEnd="@dimen/padding_large"
            android:paddingLeft="0dp"
            android:paddingRight="@dimen/padding_large"
            android:paddingStart="0dp"
            android:text="@string/order_confirmation_thank" />

        <LinearLayout
            android:id="@+id/order_confirm_continue_shopping_button"
            style="@style/main_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/order_confirm_continue_shopping_button_text"
                style="@style/cart_header_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/arrow_left_big"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/arrow_left_big"
                android:gravity="center"
                android:text="@string/cart_menu_continue_shopping" />
        </LinearLayout>
    </LinearLayout>

    <!-- section 1 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.1"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical">

        <!-- Order Confirmation number -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_small"
            android:paddingTop="@dimen/padding_small">

            <TextView
                android:id="@+id/order_confirm_number_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/order_confirmation_number"
                android:textSize="16sp" />
        </LinearLayout>

        <!-- order confirmation email -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_small"
            android:paddingTop="@dimen/padding_small">

            <TextView
                android:id="@+id/order_confirm_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/order_confirmation_detail" />
        </LinearLayout>
    </LinearLayout>

    <!-- order delivery Summary -->

    <include layout="@layout/include_delivery_summary" />

    <!-- order confirmation Summary -->

    <include layout="@layout/include_order_summary" />

    <!-- section 3 -->

    <LinearLayout
        android:id="@+id/order_products_list_layout"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_medium">

        <!-- List of producs ordered -->

        <ListView
            android:id="@+id/order_products_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:choiceMode="none"
            android:divider="@color/order_background"
            android:dividerHeight="6dp" />
    </LinearLayout>

</LinearLayout>